Restrict neutral keyframes from being composited on top of finished animations

This CL prevents animations from running on the compositor when they contain
neutral keyframes and apply on top of existing animaions on the same property.

Bug: 805323
Change-Id: Iba19882454211f127358b78fcbfa32bfdf183048
Reviewed-on: https://chromium-review.googlesource.com/884781
Reviewed-by: Robert Flack <flackr@chromium.org>
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531814}
Former-commit-id: df884f79de135d1fae253c28da6b96413294106e